--- a/btl-fe/package.json
+++ b/btl-fe/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --live-reload --hmr -o --public-host",
+    "start": "ng serve --live-reload --hmr -o --host 0.0.0.0 --disable-host-check",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
